# swftly

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: release.yml
docs/: README.md  VERSION_FLOW.md
src/: main.cpp  version.hpp
src/conf/: conf.cpp  conf.hpp
src/encode/: encoder.cpp  encoder.hpp
src/http/: router.cpp  router.hpp  server.cpp  server.hpp
src/http/handlers/: new_short_code_handler.cpp  new_short_code_handler.hpp  ping_handler.cpp  ping_handler.hpp  root_handler.cpp  root_handler.hpp  short_code_handler.cpp  short_code_handler.hpp
src/logging/: logger_setup.cpp  logger_setup.hpp
src/storage/: storage_service.cpp  storage_service.hpp
